--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,3 +1,4 @@
+tap "ameshkov/tap"
 tap "aws/tap"
 tap "buo/cask-upgrade"
 tap "derailed/k9s"
@@ -7,8 +8,6 @@ tap "fairwindsops/tap"
 tap "golangci/tap"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "kreuzwerker/taps"
 tap "localsend/localsend"
@@ -27,6 +26,8 @@ brew "little-cms2"
 brew "webp"
 brew "jpeg-xl"
 brew "aom"
+brew "ca-certificates"
+brew "readline"
 brew "glib"
 brew "harfbuzz"
 brew "openjdk"
@@ -36,6 +37,7 @@ brew "aspell"
 brew "openssl@1.1"
 brew "python@3.11"
 brew "autojump"
+brew "automake"
 brew "awk"
 brew "aws-iam-authenticator"
 brew "awscli"
@@ -48,6 +50,7 @@ brew "bitwarden-cli"
 brew "cffi", link: false
 brew "clamav"
 brew "coreutils"
+brew "cosign"
 brew "cpanminus"
 brew "libssh2"
 brew "openldap"
@@ -60,11 +63,8 @@ brew "p11-kit"
 brew "unbound"
 brew "gnutls"
 brew "openjpeg"
-brew "libarchive"
 brew "libass"
 brew "librist"
-brew "openblas"
-brew "openvino"
 brew "pango"
 brew "sdl2"
 brew "srt"
@@ -100,6 +100,7 @@ brew "libraw"
 brew "libtool"
 brew "imagemagick"
 brew "iperf3"
+brew "libyaml"
 brew "jinja2-cli"
 brew "john-jumbo"
 brew "jq"
@@ -115,6 +116,7 @@ brew "kustomize"
 brew "ldns"
 brew "libavif"
 brew "libfido2"
+brew "libksba"
 brew "libpcap"
 brew "libzip"
 brew "linkerd"
@@ -127,8 +129,10 @@ brew "ncdu"
 brew "neovim"
 brew "nghttp2"
 brew "nikto"
+brew "openblas"
 brew "nvm"
 brew "openssh"
+brew "openvino"
 brew "perl"
 brew "pigz"
 brew "pnpm"
@@ -142,10 +146,9 @@ brew "shellcheck"
 brew "socat"
 brew "spoof-mac"
 brew "switch-lan-play"
-brew "tcptrace"
 brew "telnet"
+brew "tenv"
 brew "terraform-docs"
-brew "terragrunt"
 brew "tfk8s"
 brew "tflint"
 brew "tfsec"
@@ -165,7 +168,9 @@ brew "watch"
 brew "wget"
 brew "yarn"
 brew "yq"
+brew "zlib"
 brew "zsh"
+brew "ameshkov/tap/dnslookup"
 brew "derailed/popeye/popeye"
 brew "elastic/tap/ecctl"
 brew "fairwindsops/tap/pluto"
@@ -176,7 +181,6 @@ brew "mongodb/brew/mongodb-database-tools"
 brew "nats-io/nats-tools/nats"
 brew "norwoodj/tap/helm-docs"
 brew "sonatype-nexus-community/nancy-tap/nancy"
-brew "tofuutils/tap/tenv"
 brew "utkuozdemir/pv-migrate/pv-migrate"
 cask "android-platform-tools"
 cask "android-studio"
@@ -188,6 +192,7 @@ cask "balenaetcher"
 cask "bitwarden"
 cask "browserosaurus"
 cask "bruno"
+cask "calibre"
 cask "discord"
 cask "displaycal"
 cask "docker"
@@ -230,10 +235,10 @@ cask "obsidian"
 cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "openlens"
+cask "openvpn-connect"
 cask "oversight"
 cask "plex"
 cask "prusaslicer"
-cask "pulsar"
 cask "rectangle"
 cask "redisinsight"
 cask "rustdesk"
@@ -253,8 +258,6 @@ cask "vlc"
 cask "vscodium"
 cask "wireshark"
 cask "zoom"
-mas "GarageBand", id: 682658836
-mas "Paste", id: 967805235
 mas "Xcode", id: 497799835
 vscode "golang.go"
 vscode "ms-vscode-remote.remote-containers"
