--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -15,6 +15,7 @@ tap "mas-cli/tap"
 tap "mongodb/brew"
 tap "nats-io/nats-tools"
 tap "norwoodj/tap"
+tap "robusta-dev/krr"
 tap "sonatype-nexus-community/nancy-tap"
 tap "tofuutils/tap"
 tap "utkuozdemir/pv-migrate"
@@ -27,7 +28,7 @@ brew "webp"
 brew "jpeg-xl"
 brew "aom"
 brew "ca-certificates"
-brew "readline"
+brew "python@3.12"
 brew "glib"
 brew "harfbuzz"
 brew "openjdk"
@@ -47,17 +48,17 @@ brew "bfg"
 brew "libuv"
 brew "node"
 brew "bitwarden-cli"
-brew "cffi", link: false
-brew "clamav"
+brew "cmctl"
 brew "coreutils"
 brew "cosign"
 brew "cpanminus"
 brew "libssh2"
-brew "openldap"
 brew "rtmpdump"
 brew "curl"
+brew "dive"
 brew "docutils", link: false
 brew "dotnet"
+brew "falcoctl"
 brew "libevent"
 brew "p11-kit"
 brew "unbound"
@@ -65,6 +66,7 @@ brew "gnutls"
 brew "openjpeg"
 brew "libass"
 brew "librist"
+brew "libssh"
 brew "pango"
 brew "sdl2"
 brew "srt"
@@ -79,11 +81,12 @@ brew "gh"
 brew "ghostscript"
 brew "git"
 brew "git-delete-merged-branches"
-brew "python@3.10"
 brew "git-filter-repo"
 brew "git-lfs"
 brew "gnu-sed"
 brew "gnu-time"
+brew "libksba"
+brew "gnupg"
 brew "go"
 brew "pkg-config"
 brew "gobject-introspection"
@@ -116,7 +119,6 @@ brew "kustomize"
 brew "ldns"
 brew "libavif"
 brew "libfido2"
-brew "libksba"
 brew "libpcap"
 brew "libzip"
 brew "linkerd"
@@ -124,19 +126,24 @@ brew "luv"
 brew "mkcert"
 brew "mongosh"
 brew "mtr"
+brew "zlib"
+brew "mysql-client"
 brew "nano"
 brew "ncdu"
 brew "neovim"
 brew "nghttp2"
 brew "nikto"
+brew "notation"
 brew "openblas"
 brew "nvm"
+brew "openldap"
 brew "openssh"
 brew "openvino"
 brew "perl"
 brew "pigz"
 brew "pnpm"
 brew "pyenv"
+brew "python@3.10"
 brew "pyyaml", link: false
 brew "qpdf"
 brew "redis"
@@ -168,7 +175,6 @@ brew "watch"
 brew "wget"
 brew "yarn"
 brew "yq"
-brew "zlib"
 brew "zsh"
 brew "ameshkov/tap/dnslookup"
 brew "derailed/popeye/popeye"
@@ -180,6 +186,7 @@ brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "nats-io/nats-tools/nats"
 brew "norwoodj/tap/helm-docs"
+brew "robusta-dev/krr/krr"
 brew "sonatype-nexus-community/nancy-tap/nancy"
 brew "utkuozdemir/pv-migrate/pv-migrate"
 cask "android-platform-tools"
@@ -193,6 +200,8 @@ cask "bitwarden"
 cask "browserosaurus"
 cask "bruno"
 cask "calibre"
+cask "chatgpt"
+cask "cloudflare-warp"
 cask "discord"
 cask "displaycal"
 cask "docker"
@@ -200,6 +209,8 @@ cask "eloston-chromium"
 cask "exifcleaner"
 cask "firefox"
 cask "focusrite-control"
+cask "freecad"
+cask "gitbutler"
 cask "google-chrome"
 cask "google-chrome-beta"
 cask "google-drive"
@@ -239,7 +250,7 @@ cask "openvpn-connect"
 cask "oversight"
 cask "plex"
 cask "prusaslicer"
-cask "rectangle"
+cask "pulsar"
 cask "redisinsight"
 cask "rustdesk"
 cask "sanesidebuttons"
@@ -256,8 +267,10 @@ cask "viber"
 cask "visual-studio-code"
 cask "vlc"
 cask "vscodium"
+cask "whatsapp"
 cask "wireshark"
 cask "zoom"
+mas "LINE", id: 539883307
 mas "Xcode", id: 497799835
 vscode "golang.go"
 vscode "ms-vscode-remote.remote-containers"
