--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -35,12 +35,11 @@ brew "openjdk"
 brew "apktool"
 brew "argyll-cms"
 brew "aspell"
-brew "openssl@1.1"
-brew "python@3.11"
 brew "autojump"
 brew "automake"
 brew "awk"
 brew "aws-iam-authenticator"
+brew "cryptography", link: false
 brew "awscli"
 brew "bash"
 brew "berkeley-db"
@@ -56,7 +55,6 @@ brew "libssh2"
 brew "rtmpdump"
 brew "curl"
 brew "dive"
-brew "docutils", link: false
 brew "dotnet"
 brew "falcoctl"
 brew "libevent"
@@ -144,7 +142,7 @@ brew "pigz"
 brew "pnpm"
 brew "pyenv"
 brew "python@3.10"
-brew "pyyaml", link: false
+brew "python@3.11"
 brew "qpdf"
 brew "redis"
 brew "ripgrep"
@@ -200,17 +198,16 @@ cask "bitwarden"
 cask "browserosaurus"
 cask "bruno"
 cask "calibre"
-cask "chatgpt"
 cask "cloudflare-warp"
 cask "discord"
 cask "displaycal"
 cask "docker"
 cask "eloston-chromium"
 cask "exifcleaner"
+cask "finicky"
 cask "firefox"
 cask "focusrite-control"
 cask "freecad"
-cask "gitbutler"
 cask "google-chrome"
 cask "google-chrome-beta"
 cask "google-drive"
@@ -220,17 +217,11 @@ cask "home-assistant"
 cask "httpie"
 cask "iina"
 cask "imageoptim"
-cask "inkscape"
 cask "insomnia"
-cask "intellij-idea-ce"
 cask "iterm2"
 cask "jiggler"
-cask "keepassxc"
 cask "keka"
 cask "kekaexternalhelper"
-cask "keybase"
-cask "krita"
-cask "little-snitch"
 cask "localsend"
 cask "losslesscut"
 cask "mattermost"
@@ -238,7 +229,6 @@ cask "microsoft-auto-update"
 cask "microsoft-excel"
 cask "microsoft-outlook"
 cask "microsoft-powerpoint"
-cask "microsoft-remote-desktop"
 cask "microsoft-word"
 cask "mongodb-compass"
 cask "moonlight"
@@ -247,12 +237,10 @@ cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "openlens"
 cask "openvpn-connect"
-cask "oversight"
 cask "plex"
 cask "prusaslicer"
 cask "pulsar"
 cask "redisinsight"
-cask "rustdesk"
 cask "sanesidebuttons"
 cask "signal"
 cask "slack"
@@ -262,15 +250,14 @@ cask "telegram"
 cask "temurin"
 cask "thorium"
 cask "thunderbird"
-cask "tunnelblick"
 cask "viber"
 cask "visual-studio-code"
 cask "vlc"
 cask "vscodium"
 cask "whatsapp"
+cask "windows-app"
 cask "wireshark"
 cask "zoom"
-mas "LINE", id: 539883307
 mas "Xcode", id: 497799835
 vscode "golang.go"
 vscode "ms-vscode-remote.remote-containers"
