--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -141,6 +141,7 @@ brew "perl"
 brew "pigz"
 brew "pnpm"
 brew "pyenv"
+brew "pyenv-pip-migrate"
 brew "python@3.10"
 brew "python@3.11"
 brew "qpdf"
@@ -220,6 +221,7 @@ cask "imageoptim"
 cask "insomnia"
 cask "iterm2"
 cask "jiggler"
+cask "jordanbaird-ice"
 cask "keka"
 cask "kekaexternalhelper"
 cask "localsend"
