--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -86,7 +86,7 @@ brew "gnu-time"
 brew "libksba"
 brew "gnupg"
 brew "go"
-brew "pkg-config"
+brew "pkgconf"
 brew "gobject-introspection"
 brew "grep"
 brew "grpcurl"
@@ -193,7 +193,6 @@ cask "android-studio"
 cask "appcleaner"
 cask "atom"
 cask "autodesk-fusion"
-cask "aws-vpn-client"
 cask "balenaetcher"
 cask "bitwarden"
 cask "browserosaurus"
@@ -208,6 +207,7 @@ cask "exifcleaner"
 cask "finicky"
 cask "firefox"
 cask "focusrite-control"
+cask "font-roboto"
 cask "freecad"
 cask "google-chrome"
 cask "google-chrome-beta"
@@ -221,7 +221,6 @@ cask "imageoptim"
 cask "insomnia"
 cask "iterm2"
 cask "jiggler"
-cask "jordanbaird-ice"
 cask "keka"
 cask "kekaexternalhelper"
 cask "localsend"
@@ -231,6 +230,7 @@ cask "microsoft-auto-update"
 cask "microsoft-excel"
 cask "microsoft-outlook"
 cask "microsoft-powerpoint"
+cask "microsoft-teams"
 cask "microsoft-word"
 cask "mongodb-compass"
 cask "moonlight"
@@ -238,11 +238,12 @@ cask "obsidian"
 cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "openlens"
+cask "openmtp"
 cask "openvpn-connect"
 cask "plex"
 cask "prusaslicer"
 cask "pulsar"
-cask "redisinsight"
+cask "redis-insight"
 cask "sanesidebuttons"
 cask "signal"
 cask "slack"
