--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -6,6 +6,7 @@ tap "derailed/popeye"
 tap "elastic/tap"
 tap "fairwindsops/tap"
 tap "golangci/tap"
+tap "grishka/grishka"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
 tap "homebrew/services"
@@ -28,8 +29,8 @@ brew "webp"
 brew "jpeg-xl"
 brew "aom"
 brew "ca-certificates"
-brew "python@3.12"
 brew "glib"
+brew "python@3.12"
 brew "harfbuzz"
 brew "openjdk"
 brew "apktool"
@@ -39,7 +40,7 @@ brew "autojump"
 brew "automake"
 brew "awk"
 brew "aws-iam-authenticator"
-brew "cryptography", link: false
+brew "cryptography"
 brew "awscli"
 brew "bash"
 brew "berkeley-db"
@@ -121,6 +122,7 @@ brew "libpcap"
 brew "libzip"
 brew "linkerd"
 brew "luv"
+brew "media-info"
 brew "mkcert"
 brew "mongosh"
 brew "mtr"
@@ -234,6 +236,8 @@ cask "microsoft-teams"
 cask "microsoft-word"
 cask "mongodb-compass"
 cask "moonlight"
+cask "mqtt-explorer"
+cask "neardrop"
 cask "obsidian"
 cask "openineditor-lite"
 cask "openinterminal-lite"
