--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -144,6 +144,7 @@ brew "pigz"
 brew "pnpm"
 brew "pyenv"
 brew "pyenv-pip-migrate"
+brew "python-tk@3.13"
 brew "python@3.10"
 brew "python@3.11"
 brew "qpdf"
@@ -199,6 +200,7 @@ cask "balenaetcher"
 cask "bitwarden"
 cask "browserosaurus"
 cask "bruno"
+cask "burp-suite"
 cask "calibre"
 cask "cloudflare-warp"
 cask "discord"
@@ -234,6 +236,7 @@ cask "microsoft-outlook"
 cask "microsoft-powerpoint"
 cask "microsoft-teams"
 cask "microsoft-word"
+cask "mitmproxy"
 cask "mongodb-compass"
 cask "moonlight"
 cask "mqtt-explorer"
@@ -255,7 +258,6 @@ cask "spotify"
 cask "teamviewer"
 cask "telegram"
 cask "temurin"
-cask "thorium"
 cask "thunderbird"
 cask "viber"
 cask "visual-studio-code"
@@ -264,8 +266,7 @@ cask "vscodium"
 cask "whatsapp"
 cask "windows-app"
 cask "wireshark"
+cask "zap"
 cask "zoom"
-mas "Paste", id: 967805235
-mas "Xcode", id: 497799835
 vscode "golang.go"
 vscode "ms-vscode-remote.remote-containers"
