--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -12,7 +12,6 @@ tap "homebrew/bundle"
 tap "homebrew/services"
 tap "kreuzwerker/taps"
 tap "localsend/localsend"
-tap "mas-cli/tap"
 tap "mongodb/brew"
 tap "nats-io/nats-tools"
 tap "norwoodj/tap"
@@ -28,14 +27,14 @@ brew "little-cms2"
 brew "webp"
 brew "jpeg-xl"
 brew "aom"
-brew "ca-certificates"
 brew "glib"
-brew "python@3.12"
 brew "harfbuzz"
+brew "ca-certificates"
 brew "openjdk"
 brew "apktool"
 brew "argyll-cms"
 brew "aspell"
+brew "python@3.12"
 brew "autojump"
 brew "automake"
 brew "awk"
@@ -48,6 +47,8 @@ brew "bfg"
 brew "libuv"
 brew "node"
 brew "bitwarden-cli"
+brew "libyaml"
+brew "cf2tf"
 brew "cmctl"
 brew "coreutils"
 brew "cosign"
@@ -102,7 +103,6 @@ brew "libraw"
 brew "libtool"
 brew "imagemagick"
 brew "iperf3"
-brew "libyaml"
 brew "jinja2-cli"
 brew "john-jumbo"
 brew "jq"
@@ -112,6 +112,7 @@ brew "ko"
 brew "kubernetes-cli"
 brew "krew"
 brew "kubectx"
+brew "kubent"
 brew "kubeseal"
 brew "kubie"
 brew "kustomize"
@@ -121,10 +122,13 @@ brew "libfido2"
 brew "libpcap"
 brew "libzip"
 brew "linkerd"
+brew "lnav"
 brew "luv"
+brew "mas"
 brew "media-info"
 brew "mkcert"
 brew "mongosh"
+brew "mongodb-atlas-cli"
 brew "mtr"
 brew "zlib"
 brew "mysql-client"
@@ -184,7 +188,6 @@ brew "elastic/tap/ecctl"
 brew "fairwindsops/tap/pluto"
 brew "golangci/tap/golangci-lint"
 brew "kreuzwerker/taps/m1-terraform-provider-helper"
-brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "nats-io/nats-tools/nats"
 brew "norwoodj/tap/helm-docs"
@@ -202,11 +205,11 @@ cask "browserosaurus"
 cask "bruno"
 cask "burp-suite"
 cask "calibre"
+cask "claude"
 cask "cloudflare-warp"
 cask "discord"
 cask "displaycal"
-cask "docker"
-cask "eloston-chromium"
+cask "docker-desktop"
 cask "exifcleaner"
 cask "finicky"
 cask "firefox"
@@ -217,9 +220,9 @@ cask "google-chrome"
 cask "google-chrome-beta"
 cask "google-drive"
 cask "gpg-suite"
-cask "handbrake"
+cask "handbrake-app"
 cask "home-assistant"
-cask "httpie"
+cask "httpie-desktop"
 cask "iina"
 cask "imageoptim"
 cask "insomnia"
@@ -259,14 +262,23 @@ cask "teamviewer"
 cask "telegram"
 cask "temurin"
 cask "thunderbird"
+cask "transnomino"
+cask "tunnelblick"
+cask "ungoogled-chromium"
 cask "viber"
 cask "visual-studio-code"
 cask "vlc"
 cask "vscodium"
 cask "whatsapp"
 cask "windows-app"
-cask "wireshark"
+cask "wireshark-app"
 cask "zap"
 cask "zoom"
+mas "Perplexity", id: 6714467650
+mas "Xcode", id: 497799835
 vscode "golang.go"
+vscode "ms-python.debugpy"
+vscode "ms-python.pylint"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
 vscode "ms-vscode-remote.remote-containers"
