--- a/.gitmodules
+++ b/.gitmodules
@@ -44,3 +44,6 @@
 [submodule "zsh/custom/plugins/zsh-fast-alias-tips"]
 	path = zsh/custom/plugins/zsh-fast-alias-tips
 	url = https://github.com/decayofmind/zsh-fast-alias-tips.git
+[submodule "plugins/dotbot-secret"]
+	path = plugins/dotbot-secret
+	url = https://github.com/er1c-zh/dotbot-secret.git
