--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -5,6 +5,7 @@ tap "derailed/k9s"
 tap "derailed/popeye"
 tap "elastic/tap"
 tap "fairwindsops/tap"
+tap "fluxcd/tap"
 tap "golangci/tap"
 tap "grishka/grishka"
 tap "hashicorp/tap"
@@ -16,11 +17,13 @@ tap "mongodb/brew"
 tap "nats-io/nats-tools"
 tap "norwoodj/tap"
 tap "robusta-dev/krr"
+tap "scalr/scalr"
 tap "sonatype-nexus-community/nancy-tap"
 tap "tofuutils/tap"
 tap "utkuozdemir/pv-migrate"
 tap "warrensbox/tap"
 brew "act"
+brew "age"
 brew "xz"
 brew "zstd"
 brew "little-cms2"
@@ -29,9 +32,8 @@ brew "jpeg-xl"
 brew "aom"
 brew "glib"
 brew "harfbuzz"
-brew "ca-certificates"
-brew "openjdk"
 brew "apktool"
+brew "ca-certificates"
 brew "argyll-cms"
 brew "aspell"
 brew "python@3.12"
@@ -94,6 +96,7 @@ brew "grep"
 brew "grpcurl"
 brew "hadolint"
 brew "helm"
+brew "helmfile"
 brew "hey"
 brew "htop"
 brew "iam-policy-json-to-terraform"
@@ -111,6 +114,7 @@ brew "k9s"
 brew "ko"
 brew "kubernetes-cli"
 brew "krew"
+brew "ksops"
 brew "kubectx"
 brew "kubent"
 brew "kubeseal"
@@ -157,6 +161,7 @@ brew "ripgrep"
 brew "rsync"
 brew "shellcheck"
 brew "socat"
+brew "sops"
 brew "spoof-mac"
 brew "switch-lan-play"
 brew "telnet"
@@ -179,6 +184,7 @@ brew "viddy"
 brew "wakeonlan"
 brew "watch"
 brew "wget"
+brew "wireguard-tools"
 brew "yarn"
 brew "yq"
 brew "zsh"
@@ -186,12 +192,14 @@ brew "ameshkov/tap/dnslookup"
 brew "derailed/popeye/popeye"
 brew "elastic/tap/ecctl"
 brew "fairwindsops/tap/pluto"
+brew "fluxcd/tap/flux"
 brew "golangci/tap/golangci-lint"
 brew "kreuzwerker/taps/m1-terraform-provider-helper"
 brew "mongodb/brew/mongodb-database-tools"
 brew "nats-io/nats-tools/nats"
 brew "norwoodj/tap/helm-docs"
 brew "robusta-dev/krr/krr"
+brew "scalr/scalr/scalr"
 brew "sonatype-nexus-community/nancy-tap/nancy"
 brew "utkuozdemir/pv-migrate/pv-migrate"
 cask "android-platform-tools"
@@ -215,7 +223,6 @@ cask "finicky"
 cask "firefox"
 cask "focusrite-control"
 cask "font-roboto"
-cask "freecad"
 cask "google-chrome"
 cask "google-chrome-beta"
 cask "google-drive"
@@ -228,8 +235,10 @@ cask "imageoptim"
 cask "insomnia"
 cask "iterm2"
 cask "jiggler"
+cask "jordanbaird-ice"
 cask "keka"
 cask "kekaexternalhelper"
+cask "little-snitch"
 cask "localsend"
 cask "losslesscut"
 cask "mattermost"
@@ -253,6 +262,7 @@ cask "openvpn-connect"
 cask "plex"
 cask "prusaslicer"
 cask "pulsar"
+cask "raspberry-pi-imager"
 cask "redis-insight"
 cask "sanesidebuttons"
 cask "signal"
@@ -272,9 +282,9 @@ cask "vscodium"
 cask "whatsapp"
 cask "windows-app"
 cask "wireshark-app"
-cask "zap"
 cask "zoom"
 mas "Perplexity", id: 6714467650
+mas "WireGuard", id: 1451685025
 mas "Xcode", id: 497799835
 vscode "golang.go"
 vscode "ms-python.debugpy"
