--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -50,6 +50,7 @@ brew "libuv"
 brew "node"
 brew "bitwarden-cli"
 brew "libyaml"
+brew "certbot"
 brew "cf2tf"
 brew "cmctl"
 brew "coreutils"
@@ -120,6 +121,7 @@ brew "kubent"
 brew "kubeseal"
 brew "kubie"
 brew "kustomize"
+brew "lazygit"
 brew "ldns"
 brew "libavif"
 brew "libfido2"
@@ -150,6 +152,7 @@ brew "openvino"
 brew "perl"
 brew "pigz"
 brew "pnpm"
+brew "pv"
 brew "pyenv"
 brew "pyenv-pip-migrate"
 brew "python-tk@3.13"
@@ -223,6 +226,7 @@ cask "finicky"
 cask "firefox"
 cask "focusrite-control"
 cask "font-roboto"
+cask "gcloud-cli"
 cask "google-chrome"
 cask "google-chrome-beta"
 cask "google-drive"
@@ -241,6 +245,7 @@ cask "kekaexternalhelper"
 cask "little-snitch"
 cask "localsend"
 cask "losslesscut"
+cask "mactex"
 cask "mattermost"
 cask "microsoft-auto-update"
 cask "microsoft-excel"
@@ -282,6 +287,7 @@ cask "vscodium"
 cask "whatsapp"
 cask "windows-app"
 cask "wireshark-app"
+cask "zed"
 cask "zoom"
 mas "Perplexity", id: 6714467650
 mas "WireGuard", id: 1451685025
