--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -233,6 +233,7 @@ cask "google-drive"
 cask "gpg-suite"
 cask "handbrake-app"
 cask "home-assistant"
+cask "http-toolkit"
 cask "httpie-desktop"
 cask "iina"
 cask "imageoptim"
