--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,3 +1,4 @@
+tap "alexstrnik/browserino"
 tap "ameshkov/tap"
 tap "aws/tap"
 tap "buo/cask-upgrade"
@@ -212,11 +213,10 @@ cask "atom"
 cask "autodesk-fusion"
 cask "balenaetcher"
 cask "bitwarden"
-cask "browserosaurus"
+cask "alexstrnik/browserino/browserino"
 cask "bruno"
 cask "burp-suite"
 cask "calibre"
-cask "claude"
 cask "cloudflare-warp"
 cask "discord"
 cask "displaycal"
@@ -258,13 +258,11 @@ cask "mitmproxy"
 cask "mongodb-compass"
 cask "moonlight"
 cask "mqtt-explorer"
-cask "neardrop"
 cask "obsidian"
 cask "openineditor-lite"
 cask "openinterminal-lite"
 cask "openlens"
 cask "openmtp"
-cask "openvpn-connect"
 cask "plex"
 cask "prusaslicer"
 cask "pulsar"
@@ -284,18 +282,11 @@ cask "ungoogled-chromium"
 cask "viber"
 cask "visual-studio-code"
 cask "vlc"
-cask "vscodium"
-cask "whatsapp"
 cask "windows-app"
-cask "wireshark-app"
 cask "zed"
 cask "zoom"
+mas "Brother P-touch Editor", id: 1453365242
+mas "Get Plain Text", id: 508368068
 mas "Perplexity", id: 6714467650
 mas "WireGuard", id: 1451685025
 mas "Xcode", id: 497799835
-vscode "golang.go"
-vscode "ms-python.debugpy"
-vscode "ms-python.pylint"
-vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
-vscode "ms-vscode-remote.remote-containers"
