--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -54,6 +54,7 @@ brew "libyaml"
 brew "certbot"
 brew "cf2tf"
 brew "cmctl"
+brew "container-structure-test"
 brew "coreutils"
 brew "cosign"
 brew "cpanminus"
@@ -78,6 +79,7 @@ brew "tesseract"
 brew "ffmpeg"
 brew "figlet"
 brew "findutils"
+brew "fnm"
 brew "frpc"
 brew "fzf"
 brew "gdbm"
@@ -147,6 +149,7 @@ brew "nikto"
 brew "notation"
 brew "openblas"
 brew "nvm"
+brew "oci-cli"
 brew "openldap"
 brew "openssh"
 brew "openvino"
@@ -189,7 +192,6 @@ brew "wakeonlan"
 brew "watch"
 brew "wget"
 brew "wireguard-tools"
-brew "yarn"
 brew "yq"
 brew "zsh"
 brew "ameshkov/tap/dnslookup"
@@ -281,6 +283,7 @@ cask "ungoogled-chromium"
 cask "viber"
 cask "visual-studio-code"
 cask "vlc"
+cask "winbox"
 cask "windows-app"
 cask "zed"
 cask "zoom"
